--- a/front/src/css/header.css
+++ b/front/src/css/header.css
@@ -8,19 +8,19 @@ box-sizing:border-box;
 }
 
 .header_main{
-width:100vw;
-height:100vh;
-margin:0;
-overflow:hidden !important;
-font-family: 'Source Sans 3', sans-serif !important;
-background: linear-gradient(rgba(1,1,1,.7), rgba(1, 1, 1, 0.6)), url("https://i.ibb.co/n0xx0mr/bg.jpg");
-background-position:center;
-background-size:cover;
-display:flex;
-align-items:center;
-justify-content:center;
-color:var(--white);
-position:relative;
+        width:100vw;
+        height:100vh;
+        margin:0;
+        overflow:hidden !important;
+        font-family: 'Source Sans 3', sans-serif !important;
+        background: linear-gradient(rgba(1,1,1,.7), rgba(1, 1, 1, 0.6)), url("https://i.postimg.cc/YStbKxX1/pexels-photo-1229861.jpg");
+        background-position:center;
+        background-size:cover;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        color:var(--white);
+        position:relative;
 }
 
 .content{
