--- a/front/src/css/login.css
+++ b/front/src/css/login.css
@@ -43,7 +43,7 @@
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
   outline: 0;
-  background: #4b6cb7;
+  background: BLACK;
   width: 100%;
   border: 0;
   border-radius: 5px;
@@ -61,5 +61,5 @@
 
 .form span {
   font-size: 75px;
-  color: #4b6cb7;
+  color: BLACK;
 }
